// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/git/index getBranchFiles(branchName) detects changed files compared to current base branch 1`] = `
Array [
  "some-new-file",
]
`;

exports[`util/git/index getCommitMessages() returns commit messages 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`util/git/index getFileList() should exclude submodules 1`] = `
Array [
  ".gitmodules",
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`util/git/index getFileList() should return the correct files 1`] = `
Array [
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`util/git/index initRepo()) should fetch latest 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`util/git/index initRepo()) should fetch latest 2`] = `
Array [
  "past message2",
  "master message",
]
`;
